--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,1 +1,7 @@
-<h1>This is the navbar</h1>
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <h1>Poke-Grid</h1>
+        </a>
+    </div>
+</nav>
