--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,5 @@ body {
     box-sizing: border-box;
     -webkit-overflow-scrolling: touch;
 }
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
