add components and style
add nav and footer component
add bootstrap icons
add basic styling to footer

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,19 @@
-<footer>poke-grid 2023 ag-grid project</footer>
+<div class="card text-center footer">
+    <div class="card-body">
+      <h5 class="card-title">Go Catch Em All!</h5>
+      <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.linkedin.com/in/jeffreygrospe/">Linkedin</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/jgrospe92">Github</a>
+        </li>
+      </ul>
+    </div>
+    <div class="card-footer text-body-secondary">
+        <i class="bi bi-c-circle"></i>2023 Poke-grid
+    </div>
+  </div>
