fix sass import & navbar style

--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light header">
+<nav class="navbar navbar-expand-sm navbar-light app_navbar">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <h1>Poke-Grid</h1>
+            <h1 class="app_navbar__brand">Poke-Grid</h1>
         </a>
     </div>
 </nav>
