--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
 @use 'scss/normalize';
 @use 'scss/root';
+@use 'scss/custom_fonts';
+
+
 
 /* You can add global styles to this file, and also import other style files */
 @import 'ag-grid-community/styles/ag-grid.css';
