--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,7 +1,25 @@
-<nav class="navbar navbar-expand-sm navbar-light app_navbar">
+<nav class="navbar navbar-expand-sm app_navbar">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <h1 class="app_navbar__brand">Poke-Grid</h1>
+        <a class="navbar-brand" [routerLink]="'.'">
+            <h1 class="app_navbar__brand">PokeGrid</h1>
         </a>
+        <!-- Step 3: Toggle the value of the property when the toggler button is clicked. -->
+        <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">&#9776;</button>
+
+        <!-- Step 2: Add the ngbCollapse directive to the element below. -->
+        <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <!-- Step 4: Close the menu when a link is clicked. -->
+                    <a class="nav-link app_navbar__item" [routerLink]="'.'" (click)="isMenuCollapsed = true">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link app_navbar__item" [routerLink]="'.'" (click)="isMenuCollapsed = true">PokeGrid</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link app_navbar__item" [routerLink]="'.'" (click)="isMenuCollapsed = true">About</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
