--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,175 @@
-<p>home works!</p>
+<!-- <div id="mz-gallery-container">
+    <div id="mz-gallery">
+        <figure>
+            <img src="https://picsum.photos/id/818/700/700" alt="Statue of Liberty" width="700" height="700">
+            <figcaption>Statue of Liberty</figcaption>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </figure>
+
+        <figure>
+            <img src="https://picsum.photos/id/537/700/700" alt="Night Sky" width="700" height="700">
+            <figcaption>Night Sky</figcaption>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </figure>
+
+        <figure>
+            <img src="https://picsum.photos/id/136/700/700" alt="Ravine Between Rocks" width="700" height="700">
+            <figcaption>Ravine Between Rocks</figcaption>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </figure>
+
+        <figure>
+            <img src="https://picsum.photos/id/337/700/700" alt="Wheat Farm" width="700" height="700">
+            <figcaption>Wheat Farm</figcaption>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </figure>
+
+        <figure>
+            <img src="https://picsum.photos/id/737/700/700" alt="City Street" width="700" height="700">
+            <figcaption>City Street</figcaption>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </figure>
+
+        <figure>
+            <img src="https://picsum.photos/id/217/700/700" alt="Crumbling Pier" width="700" height="700">
+            <figcaption>Crumbling Pier</figcaption>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </figure>
+
+        <figure>
+            <img src="https://picsum.photos/id/416/700/700" alt="Foggy Mountains" width="700" height="700">
+            <figcaption>Foggy Mountains</figcaption>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </figure>
+
+        <figure>
+            <img src="https://picsum.photos/id/811/700/700" alt="Dense Forest" width="700" height="700">
+            <figcaption>Dense Forest</figcaption>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </figure>
+
+        <figure>
+            <img src="https://picsum.photos/id/902/700/700" alt="Sunset Over Mountains" width="700" height="700">
+            <figcaption>Sunset Over Mountains</figcaption>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </figure>
+
+        <figure>
+            <img src="https://picsum.photos/id/514/700/700" alt="SUV in Front of Building" width="700" height="700">
+            <figcaption>SUV in Front of Building</figcaption>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </figure>
+
+        <figure>
+            <img src="https://picsum.photos/id/111/700/700" alt="Classic Vehicle" width="700" height="700">
+            <figcaption>Classic Vehicle</figcaption>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </figure>
+
+        <figure>
+            <img src="https://picsum.photos/id/168/700/700" alt="Stacked Rocks" width="700" height="700">
+            <figcaption>Stacked Rocks</figcaption>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </figure>
+
+        <figure>
+            <img src="https://picsum.photos/id/210/700/700" alt="Brick Wall" width="700" height="700">
+            <figcaption>Brick Wall</figcaption>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </figure>
+
+        <figure>
+            <img src="https://picsum.photos/id/270/700/700" alt="Waterfront" width="700" height="700">
+            <figcaption>Waterfront</figcaption>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </figure>
+
+        <figure>
+            <img src="https://picsum.photos/id/315/700/700" alt="Overgrown Buildings" width="700" height="700">
+            <figcaption>Overgrown Buildings</figcaption>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </figure>
+
+        <figure>
+            <img src="https://picsum.photos/id/562/700/700" alt="Dying Trees" width="700" height="700">
+            <figcaption>Dying Trees</figcaption>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </figure>
+
+        <figure>
+            <img src="https://picsum.photos/id/385/700/700" alt="Ocean View" width="700" height="700">
+            <figcaption>Ocean View</figcaption>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </figure>
+
+    </div>
+
+</div> -->
+
+<div class="scroll">
+    <div class="m-scroll">
+      <span><img src="https://images.unsplash.com/photo-1656299261928-2df77bb34f29?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwcm9maWxlLXBhZ2V8Mnx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=60" ></span>
+      <span><img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.png"></span>
+      <span><img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.png"></span>
+      <span><img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.png"></span>
+      <span><img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.png"></span>
+      <span><img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.png"></span>
+      <span><img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.png" ></span>
+      <span><img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.png"></span>
+      <span><img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.png"></span>
+      <span><img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.png"></span>
+      <span><img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.png"></span>
+      <span><img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.png"></span>
+    </div>
+  </div>
