--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div id="mz-gallery-container">
     <div id="mz-gallery">
         <figure>
-            <img src="https://picsum.photos/id/818/700/700" alt="Statue of Liberty" width="700" height="700">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="Statue of Liberty" width="700" height="700">
             <figcaption>Statue of Liberty</figcaption>
             <div></div>
             <div></div>
@@ -10,7 +10,7 @@
         </figure>
 
         <figure>
-            <img src="https://picsum.photos/id/537/700/700" alt="Night Sky" width="700" height="700">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/10.png" alt="Night Sky" width="700" height="700">
             <figcaption>Night Sky</figcaption>
             <div></div>
             <div></div>
@@ -19,7 +19,7 @@
         </figure>
 
         <figure>
-            <img src="https://picsum.photos/id/136/700/700" alt="Ravine Between Rocks" width="700" height="700">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/16.png" alt="Ravine Between Rocks" width="700" height="700">
             <figcaption>Ravine Between Rocks</figcaption>
             <div></div>
             <div></div>
@@ -28,7 +28,7 @@
         </figure>
 
         <figure>
-            <img src="https://picsum.photos/id/337/700/700" alt="Wheat Farm" width="700" height="700">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/22.png" alt="Wheat Farm" width="700" height="700">
             <figcaption>Wheat Farm</figcaption>
             <div></div>
             <div></div>
@@ -37,7 +37,7 @@
         </figure>
 
         <figure>
-            <img src="https://picsum.photos/id/737/700/700" alt="City Street" width="700" height="700">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/26.png" alt="City Street" width="700" height="700">
             <figcaption>City Street</figcaption>
             <div></div>
             <div></div>
@@ -46,7 +46,7 @@
         </figure>
 
         <figure>
-            <img src="https://picsum.photos/id/217/700/700" alt="Crumbling Pier" width="700" height="700">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/30.png" alt="Crumbling Pier" width="700" height="700">
             <figcaption>Crumbling Pier</figcaption>
             <div></div>
             <div></div>
@@ -55,7 +55,7 @@
         </figure>
 
         <figure>
-            <img src="https://picsum.photos/id/416/700/700" alt="Foggy Mountains" width="700" height="700">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/32.png" alt="Foggy Mountains" width="700" height="700">
             <figcaption>Foggy Mountains</figcaption>
             <div></div>
             <div></div>
@@ -64,7 +64,7 @@
         </figure>
 
         <figure>
-            <img src="https://picsum.photos/id/811/700/700" alt="Dense Forest" width="700" height="700">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/103.png" alt="Dense Forest" width="700" height="700">
             <figcaption>Dense Forest</figcaption>
             <div></div>
             <div></div>
@@ -73,7 +73,7 @@
         </figure>
 
         <figure>
-            <img src="https://picsum.photos/id/902/700/700" alt="Sunset Over Mountains" width="700" height="700">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/144.png" alt="Sunset Over Mountains" width="700" height="700">
             <figcaption>Sunset Over Mountains</figcaption>
             <div></div>
             <div></div>
@@ -82,7 +82,7 @@
         </figure>
 
         <figure>
-            <img src="https://picsum.photos/id/514/700/700" alt="SUV in Front of Building" width="700" height="700">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/178.png" alt="SUV in Front of Building" width="700" height="700">
             <figcaption>SUV in Front of Building</figcaption>
             <div></div>
             <div></div>
@@ -91,7 +91,7 @@
         </figure>
 
         <figure>
-            <img src="https://picsum.photos/id/111/700/700" alt="Classic Vehicle" width="700" height="700">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/44.png" alt="Classic Vehicle" width="700" height="700">
             <figcaption>Classic Vehicle</figcaption>
             <div></div>
             <div></div>
@@ -100,7 +100,7 @@
         </figure>
 
         <figure>
-            <img src="https://picsum.photos/id/168/700/700" alt="Stacked Rocks" width="700" height="700">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/79.png" alt="Stacked Rocks" width="700" height="700">
             <figcaption>Stacked Rocks</figcaption>
             <div></div>
             <div></div>
@@ -109,7 +109,7 @@
         </figure>
 
         <figure>
-            <img src="https://picsum.photos/id/210/700/700" alt="Brick Wall" width="700" height="700">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/99.png" alt="Brick Wall" width="700" height="700">
             <figcaption>Brick Wall</figcaption>
             <div></div>
             <div></div>
@@ -118,7 +118,7 @@
         </figure>
 
         <figure>
-            <img src="https://picsum.photos/id/270/700/700" alt="Waterfront" width="700" height="700">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/188.png" alt="Waterfront" width="700" height="700">
             <figcaption>Waterfront</figcaption>
             <div></div>
             <div></div>
@@ -127,7 +127,7 @@
         </figure>
 
         <figure>
-            <img src="https://picsum.photos/id/315/700/700" alt="Overgrown Buildings" width="700" height="700">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/210.png" alt="Overgrown Buildings" width="700" height="700">
             <figcaption>Overgrown Buildings</figcaption>
             <div></div>
             <div></div>
@@ -136,7 +136,7 @@
         </figure>
 
         <figure>
-            <img src="https://picsum.photos/id/562/700/700" alt="Dying Trees" width="700" height="700">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/111.png" alt="Dying Trees" width="700" height="700">
             <figcaption>Dying Trees</figcaption>
             <div></div>
             <div></div>
@@ -145,7 +145,7 @@
         </figure>
 
         <figure>
-            <img src="https://picsum.photos/id/385/700/700" alt="Ocean View" width="700" height="700">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/147.png" alt="Ocean View" width="700" height="700">
             <figcaption>Ocean View</figcaption>
             <div></div>
             <div></div>
