fix footer style

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="card text-center footer">
+<div class="card text-center app-footer">
     <div class="card-body">
       <h5 class="card-title">Go Catch Em All!</h5>
       <ul class="nav justify-content-center">
