updated carousel style

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div id="mz-gallery-container">
-    <div id="mz-gallery">
+    <div #horizontal_scroll id="mz-gallery">
         <figure>
             <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="Statue of Liberty" width="700" height="700">
             <figcaption>Statue of Liberty</figcaption>
